# OpenPegs

./: .coveragerc  .gitignore  .style.yapf  README.md  __TicTacToe_test.py  __dataclass_test.py  analyze_boards.py  cov.xml  pegs.code-workspace  pytest.ini  requirements.txt  run_pegs.py  setup.cfg
src/: PegBoard.py  PegNode.py  PegNodeLink.py  PegPyramid.py  __main__.py  pegs.py
src/pegs/: PegBoard.py  PegException.py  PegNode.py  PegNodeLink.py  PegNodePeg.py  PegPyramid.py  PegPyramidAnalyzer.py  __PegNode.py  __PegNodeId.py  __PegNodePeg.py  docstring_tests.py  pegs.py
tests/: test_PegBoard.py  test_PegNode.py  test_PegNodeLink.py  test_PegPyramid.py
tests/pegs/: __test_PegNode.py  __test_PegNodePeg.py  test_PegBoard.py  test_PegNode.py  test_PegNodeId.py  test_PegNodeLink.py  test_PegNodePeg.py  test_PegPyramid.py  test_PegPyramidAnalyzer.py
