[metadata]
name = OpenPegs
author = Michael Leiter (LightCC)
author-email = light_cc@yahoo.com
summary = Classic Peg Board Game and Analysis Libraries
description-file = README.md
description-content-type = text/x-markdown; charset=UTF-8
# home-page = 
# project_urls =
#     Bug Tracker = https://bugs.launchpad.net/pbr/
#     Documentation = https://docs.openstack.org/pbr/
#     Source Code = https://git.openstack.org/cgit/openstack-dev/pbr/
license = Custom
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Users
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    game

[files]
packages =
    pegs
# data_files =
#     etc/pbr = etc/*
#     etc/init =
#         pbr.packaging.conf
#         pbr.version.conf

[entry_points]
console_scripts =
    pegs = src.pegs:main
# pbr.config.drivers =
#     plain = pbr.cfg.driver:Plain